# crosslink-api

./: README.md  pyproject.toml
app/: main.py
app/api/: depends.py
app/api/v1/: api.py
app/api/v1/endpoint/: admin.py  auth.py  box.py
app/core/: config.py  security.py  util.py
app/core/db/: session.py
app/crud/: crud_admin.py  crud_box.py  crud_user.py
app/model/: admin.py  box.py  user.py
app/schema/: admin.py  auth.py  base.py  box.py  token.py  user.py
app/test/: conftest.py  util.py
app/test/api/v1/endpoint/: test_admin.py  test_auth.py  test_box.py
app/test/core/: test_security.py
app/test/crud/: test_crud_admin.py  test_crud_box.py  test_crud_user.py
app/type/: admin.py  auth.py  box.py
sql/: ddl.sql  init.sql
